--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 	"target": "es5",
 	"module": "commonjs",
 	"declaration": true,
-	"noImplicitAny": false,
+	"noImplicitAny": true,
 	"suppressImplicitAnyIndexErrors": true,
 	"strictNullChecks": false,
 	"removeComments": false,
